--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
               <p class='description'><span title='package description'>Bump "version" field of multiple package.json files</span></p>
             </article>
           </li>
+          <li class='child' data-name="@khai96x/choose-text-editor" data-version="0.0.0" data-description="Get path to a text editor executable base on some environment variables" data-route="choose-text-editor/index.html" data-npm="https://www.npmjs.com/package/@khai96x/choose-text-editor">
+            <article>
+              <a class='link name' target='@khai96x/choose-text-editor' href='choose-text-editor/index.html'>@khai96x/choose-text-editor</a>
+              <span class='version' title='version'>0.0.0</span>
+              <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/choose-text-editor'>[npm]</a>
+              <p class='description'><span title='package description'>Get path to a text editor executable base on some environment variables</span></p>
+            </article>
+          </li>
           <li class='child' data-name="@khai96x/interval-observable-universe" data-version="0.0.3" data-description="A pool of interval observable" data-route="interval-observable-universe/index.html" data-npm="https://www.npmjs.com/package/@khai96x/interval-observable-universe">
             <article>
               <a class='link name' target='@khai96x/interval-observable-universe' href='interval-observable-universe/index.html'>@khai96x/interval-observable-universe</a>
@@ -74,6 +82,14 @@
               <span class='version' title='version'>0.0.3</span>
               <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/my-observables'>[npm]</a>
               <p class='description'><span title='package description'>Events that I use</span></p>
+            </article>
+          </li>
+          <li class='child' data-name="@khai96x/utils" data-version="0.0.0" data-description="Utilities to be used by other packages" data-route="utils/index.html" data-npm="https://www.npmjs.com/package/@khai96x/utils">
+            <article>
+              <a class='link name' target='@khai96x/utils' href='utils/index.html'>@khai96x/utils</a>
+              <span class='version' title='version'>0.0.0</span>
+              <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/utils'>[npm]</a>
+              <p class='description'><span title='package description'>Utilities to be used by other packages</span></p>
             </article>
           </li>
         </ul>
