--- a/my-observables/interfaces/quobservableparams.html
+++ b/my-observables/interfaces/quobservableparams.html
@@ -84,6 +84,7 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="quobservableparams.html#initiate" class="tsd-kind-icon">initiate</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="quobservableparams.html#runperiod" class="tsd-kind-icon">run<wbr>Period</a></li>
 							</ul>
 						</section>
@@ -93,12 +94,22 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="initiate" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> <span class="tsd-flag ts-flagReadonly">Readonly</span> initiate</h3>
+					<div class="tsd-signature tsd-kind-icon">initiate<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/39daa9e/packages/my-observables/lib/pacman.ts#L23">lib/pacman.ts:23</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="runperiod" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> run<wbr>Period</h3>
 					<div class="tsd-signature tsd-kind-icon">run<wbr>Period<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/my-observables/lib/pacman.ts#L14">lib/pacman.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/39daa9e/packages/my-observables/lib/pacman.ts#L22">lib/pacman.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,6 +136,9 @@
 					<li class="current tsd-kind-interface tsd-is-external">
 						<a href="quobservableparams.html" class="tsd-kind-icon">Qu<wbr>Observable<wbr>Params</a>
 						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="quobservableparams.html#initiate" class="tsd-kind-icon">initiate</a>
+							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 								<a href="quobservableparams.html#runperiod" class="tsd-kind-icon">run<wbr>Period</a>
 							</li>
